--- a/sExpenses/LGSpenderCellTableViewCell.xib
+++ b/sExpenses/LGSpenderCellTableViewCell.xib
@@ -10,20 +10,20 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="58" id="KGk-i7-Jjw" customClass="LGSpenderCellTableViewCell" customModule="sExpenses" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="57.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wgn-E2-fhU">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wgn-E2-fhU">
                         <rect key="frame" x="8" y="8" width="42" height="38"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Lo de Falucho" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOZ-7h-RMT">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Lo de Falucho" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOZ-7h-RMT">
                         <rect key="frame" x="58" y="8" width="161" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Restaurant" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xW0-eh-tqz">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Restaurant" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xW0-eh-tqz">
                         <rect key="frame" x="58" y="28" width="136" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="158" id="Nwh-dt-CTh"/>
@@ -32,22 +32,17 @@
                         <color key="textColor" red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MWw-k0-mnj">
-                        <rect key="frame" x="254" y="14" width="40" height="30"/>
-                        <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="$ 100" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qga-h2-zYI">
-                                <rect key="frame" x="0.0" y="0.0" width="40" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="GTX-UY-SiE"/>
-                                    <constraint firstAttribute="width" constant="40" id="Y3f-Pj-ITo"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                        </subviews>
-                    </stackView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="icon_visa.png" translatesAutoresizingMaskIntoConstraints="NO" id="x77-Ey-Xbz">
-                        <rect key="frame" x="202" y="29" width="33" height="20"/>
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="$ 100.00" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qga-h2-zYI">
+                        <rect key="frame" x="227" y="12" width="78" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="GTX-UY-SiE"/>
+                            <constraint firstAttribute="width" constant="78" id="Y3f-Pj-ITo"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits"/>
+                    </textField>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="icon_visa.png" translatesAutoresizingMaskIntoConstraints="NO" id="x77-Ey-Xbz">
+                        <rect key="frame" x="186" y="29" width="33" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="33" id="HuY-fd-1br"/>
                             <constraint firstAttribute="height" constant="20" id="hGE-5N-6ew"/>
@@ -55,17 +50,16 @@
                     </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="qga-h2-zYI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="5jC-zD-Pci"/>
                     <constraint firstItem="xW0-eh-tqz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="58" id="6ZW-NE-mSg"/>
                     <constraint firstItem="xW0-eh-tqz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="20" id="8XK-fH-bFS"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="qga-h2-zYI" secondAttribute="trailing" id="9Iz-y4-rbI"/>
                     <constraint firstItem="gOZ-7h-RMT" firstAttribute="leading" secondItem="Wgn-E2-fhU" secondAttribute="trailing" constant="8" id="Cmw-Vb-CNS"/>
                     <constraint firstAttribute="leadingMargin" secondItem="Wgn-E2-fhU" secondAttribute="leading" id="FFP-8S-Kqi"/>
-                    <constraint firstItem="qga-h2-zYI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="Oxp-Kl-HKb"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="qga-h2-zYI" secondAttribute="trailing" constant="7" id="OlF-ux-cec"/>
                     <constraint firstItem="x77-Ey-Xbz" firstAttribute="top" secondItem="gOZ-7h-RMT" secondAttribute="bottom" constant="1" id="R5f-kx-cNa"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Wgn-E2-fhU" secondAttribute="bottom" constant="3.5" id="Tcp-TR-Xs2"/>
                     <constraint firstItem="x77-Ey-Xbz" firstAttribute="leading" secondItem="xW0-eh-tqz" secondAttribute="trailing" constant="15" id="beF-sP-Cuk"/>
                     <constraint firstAttribute="bottomMargin" secondItem="xW0-eh-tqz" secondAttribute="bottom" constant="0.5" id="fcS-Qm-LtL"/>
-                    <constraint firstItem="qga-h2-zYI" firstAttribute="leading" secondItem="x77-Ey-Xbz" secondAttribute="trailing" constant="25" id="mbL-da-Bir"/>
                     <constraint firstAttribute="topMargin" secondItem="gOZ-7h-RMT" secondAttribute="top" id="p5F-YZ-p68"/>
                     <constraint firstItem="xW0-eh-tqz" firstAttribute="leading" secondItem="gOZ-7h-RMT" secondAttribute="leading" id="sZC-Y5-ixt"/>
                     <constraint firstAttribute="topMargin" secondItem="Wgn-E2-fhU" secondAttribute="top" id="ypP-LM-UTB"/>
